--- a/app/src/main/res/layouts/password/layout/password_manage_item_details.xml
+++ b/app/src/main/res/layouts/password/layout/password_manage_item_details.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,6 +11,19 @@
         android:layout_margin="5dp"
         android:orientation="vertical"
         tools:context=".fragment.PasswordManageItemDetailsFragment">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    style="@style/password_manage_details_edit_style">
+    <TextView
+        style="@style/pwdShowItemTxtStyle"
+        android:text="@string/type_CN" />
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/types"/>
+</LinearLayout>
+
 
         <TextView
             style="@style/pwdShowItemTxtStyle"
@@ -58,10 +71,10 @@
 
         <com.deadline.statebutton.StateButton
             android:id="@+id/pwd_ManageDet_Ok_BtnId"
-            android:enabled="false"
             style="@style/StateButtonStyle"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:enabled="false"
             android:text="@string/ok_cn"
             app:normalBackgroundColor="@color/blue"
             app:pressedBackgroundColor="@color/blue"
