--- a/app/src/main/res/layouts/dialog/layout/add_room_dialog.xml
+++ b/app/src/main/res/layouts/dialog/layout/add_room_dialog.xml
@@ -35,6 +35,7 @@
                 android:text="@string/rental_houseNumber_cn" />
 
             <EditText
+                android:inputType="phone"
                 style="@style/editView_middle_right"
                 android:gravity="center_vertical|left"
                 android:id="@+id/rental_addRoom_houseNumber" />
@@ -63,9 +64,23 @@
                 android:text="@string/rental_meterNumber_cn" />
 
             <EditText
+                android:inputType="phone"
                 style="@style/editView_middle_right"
                 android:gravity="center_vertical|left"
                 android:id="@+id/rental_addRoom_meterNumber" />
+        </TableRow>
+
+        <TableRow style="@style/rental_room_details_tableRow">
+
+            <TextView
+                style="@style/textView_1th"
+                android:text="@string/water_number" />
+
+            <EditText
+                android:id="@+id/waterMeter"
+                style="@style/editView_middle_right"
+                android:gravity="center_vertical|left"
+                android:inputType="phone" />
         </TableRow>
 
 
