--- a/app/src/main/res/layouts/dialog/layout/rent_room_expandable_listview_borrowed_view.xml
+++ b/app/src/main/res/layouts/dialog/layout/rent_room_expandable_listview_borrowed_view.xml
@@ -9,43 +9,44 @@
     android:layoutDirection="ltr">
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_details"
+        android:id="@+id/details"
         style="@style/rental_expandable_listview_item"
         android:layout_marginTop="@dimen/rental_main_gridview_margin_9"
         android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
+        android:textColor="@color/blue"
         android:text="&#xe66f;\n查看详情" />
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_continue_rent"
+        android:id="@+id/continue_rent" android:textColor="@color/blue"
         style="@style/rental_expandable_listview_item"
         android:text="&#xe666;\n续租" />
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_leaseback"
+        android:id="@+id/leaseback" android:textColor="@color/blue"
         style="@style/rental_expandable_listview_item"
         android:text="&#xe61b;\n退租" />
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_changed_rent"
+        android:id="@+id/changed_rent" android:textColor="@color/blue"
         style="@style/rental_expandable_listview_item"
         android:text="&#xe676;\n调整租金" />
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_changed_deposit"
+        android:id="@+id/changed_deposit" android:textColor="@color/blue"
         style="@style/rental_expandable_listview_item"
         android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
         android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
         android:text="&#xe667;\n调整押金" />
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_history"
+        android:id="@+id/history" android:textColor="@color/blue"
         style="@style/rental_expandable_listview_item"
         android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
         android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
         android:text="&#xe650;\n查看出租记录" />
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_pay_propertycosts"
+        android:id="@+id/pay_propertycosts" android:textColor="@color/blue"
         style="@style/rental_expandable_listview_item"
         android:layout_columnWeight="@integer/rental_room_details_1width"
         android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
@@ -53,21 +54,21 @@
         android:text="&#xe60e;\n支付物业费" />
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_renew_contract"
+        android:id="@+id/renew_contract" android:textColor="@color/blue"
         style="@style/rental_expandable_listview_item"
         android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
         android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
         android:text="&#xe616;\n续签合同" />
 
-    <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_man_info"
+    <my_manage.tool.IconView android:textColor="@color/blue"
+        android:id="@+id/man_info"
         style="@style/rental_expandable_listview_item"
         android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
         android:layout_marginBottom="@dimen/rental_main_gridview_margin_9"
         android:text="&#xe611;\n租户资料" />
 
     <my_manage.tool.IconView
-        android:id="@+id/rent_room_expandable_listview_borrowed_del_room"
+        android:id="@+id/del_room" android:textColor="@color/blue"
         style="@style/rental_expandable_listview_item"
         android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
         android:text="&#xe63d;\n删除房源" />
