--- a/app/src/main/res/layouts/password/layout/password_manage_list_item.xml
+++ b/app/src/main/res/layouts/password/layout/password_manage_list_item.xml
@@ -2,7 +2,7 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:background="@drawable/shape_corner_white_5"
     android:orientation="vertical"
     android:stretchColumns="1"
 >
