--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -6,4 +6,6 @@
 
     <integer name="Message_Interval_byHour">1</integer>
     <integer name="defaultSaltLength">18</integer>
+    <integer name="password_total_item_count">3</integer>
+
 </resources>
