--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="pwdItemHeight">40dp</dimen>
 
     <dimen name="rental_main_gridview_title_fontsize">21sp</dimen>
+    <dimen name="icon_fontsize">25sp</dimen>
     <dimen name="rental_main_gridview_nomal_fontsize">16sp</dimen>
     <dimen name="rental_main_gridview_margin_6">6dp</dimen>
     <dimen name="rental_main_gridview_margin_9">9dp</dimen>
@@ -12,6 +13,7 @@
     <dimen name="rental_main_gridview_margin_3">3dp</dimen>
 
     <dimen name="rental_label_textSize">16dp</dimen>
+    <dimen name="middle_textSize">18dp</dimen>
     <dimen name="rent_room_expandable_listview_item_height">40dp</dimen>
     <dimen name="rent_room_details_endPadding">10dp</dimen>
     <dimen name="radiusMiddle">10dp</dimen>
